--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'Michroma';
-  src: url('./assets/fonts/Michroma-Regular.ttf') format('truetype');
+  src: url('/fonts/Michroma-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
